2009-11-27  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/opt/jap-Resolution.xml: Fixed bug in first export which was
	  caused by the PHP code to handle the MySQL<->XML conversion.

2009-11-27  Till Kamppeter <till.kamppeter@gmail.com>

	* db/source/driver/PM760p.upp.xml,
	  db/source/driver/PM760pl.upp.xml,
	  db/source/driver/PM820p.upp.xml,
	  db/source/driver/PM820pl.upp.xml,
	  db/source/driver/Postscript-Brother.xml,
	  db/source/driver/Postscript-Epson.xml,
	  db/source/driver/Postscript-Gestetner.xml,
	  db/source/driver/Postscript-HP.xml,
	  db/source/driver/Postscript-InfoPrint.xml,
	  db/source/driver/Postscript-Infotec.xml,
	  db/source/driver/Postscript-KONICA_MINOLTA.xml,
	  db/source/driver/Postscript-Kyocera.xml,
	  db/source/driver/Postscript-Lanier.xml,
	  db/source/driver/Postscript-Lexmark.xml,
	  db/source/driver/Postscript-NRG.xml,
	  db/source/driver/Postscript-Oce.xml,
	  db/source/driver/Postscript-Oki.xml,
	  db/source/driver/Postscript-Ricoh.xml,
	  db/source/driver/Postscript-Savin.xml,
	  db/source/driver/Postscript-Sharp.xml,
	  db/source/driver/Postscript-Toshiba.xml,
	  db/source/driver/Postscript.xml,
	  db/source/driver/Postscript1.xml,
	  db/source/driver/Postscript2-Oce.xml,
	  db/source/driver/Stc670p.upp.xml,
	  db/source/driver/Stc670pl.upp.xml,
	  db/source/driver/Stc680p.upp.xml,
	  db/source/driver/Stc680pl.upp.xml,
	  db/source/driver/Stc760p.upp.xml,
	  db/source/driver/Stc760pl.upp.xml,
	  db/source/driver/Stc777p.upp.xml,
	  db/source/driver/Stc777pl.upp.xml,
	  db/source/driver/Stp720p.upp.xml,
	  db/source/driver/Stp720pl.upp.xml,
	  db/source/driver/Stp870p.upp.xml,
	  db/source/driver/Stp870pl.upp.xml, db/source/driver/ap3250.xml,
	  db/source/driver/appledmp.xml, db/source/driver/bj10.xml,
	  db/source/driver/bj10e.xml, db/source/driver/bj10v.xml,
	  db/source/driver/bj10vh.xml, db/source/driver/bj200.xml,
	  db/source/driver/bj8gc12f.upp.xml,
	  db/source/driver/bj8hg12f.upp.xml,