@@ -268,6 +268,143 @@
     </constraint>
   </constraints>
   <enum_vals>
+    <enum_val id="ev/0">
+      <ev_longname>
+        <en>360x360 DPI</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>360x360dpi</en>
+      </ev_shortname>
+      <ev_driverval>360x360</ev_driverval>
+      <constraints>
+        <constraint sense="false">
+          <driver>dj505j</driver>
+          <printer>printer/HP-DeskJet_505J_Plus</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>escpage</driver>
+          <printer>printer/Epson-LP-xx00</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>fmlbp</driver>
+          <printer>printer/Fujitsu-FMLBP2xx_Page_Printer</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lbp310</driver>
+          <printer>printer/Canon-LBP-310</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lbp320</driver>
+          <printer>printer/Canon-LBP-320_Pro</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lbp320</driver>
+          <printer>printer/Canon-LBP-350</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lips2p</driver>
+          <printer>printer/Canon-LIPS-IIplus</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lips4</driver>
+        </constraint>
+        <constraint sense="false">
+          <driver>lips4v</driver>
+        </constraint>
+        <constraint sense="false">
+          <driver>lj4dithp</driver>
+          <printer>printer/HP-LaserJet_4V_4LJ_Pro</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lp2000</driver>
+          <printer>printer/Epson-LP-2000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lp2000</driver>
+          <printer>printer/Epson-LP-3000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lp2000</driver>
+          <printer>printer/Epson-LP-7000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>lp2000</driver>
+          <printer>printer/Epson-LP-7000G</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>md1xMono</driver>
+          <printer>printer/Alps-MD-1300</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>md1xMono</driver>
+          <printer>printer/Alps-MD-1500</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>md50Eco</driver>
+          <printer>printer/Alps-MD-5000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>md50Eco</driver>
+          <printer>printer/Oki-DP_5000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>md50Mono</driver>
+          <printer>printer/Alps-MD-5000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>md50Mono</driver>
+          <printer>printer/Oki-DP_5000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>ml600</driver>
+          <printer>printer/Oki-Microline_600CL</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>ml600</driver>
+          <printer>printer/Oki-Microline_620CL</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>npdl</driver>
+          <printer>printer/NEC-MultiWriter</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>npdl</driver>
+          <printer>printer/NEC-PC-PR1000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>npdl</driver>
+          <printer>printer/NEC-PC-PR2000</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>picty180</driver>
+          <printer>printer/NEC-PICTY180</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>pr150</driver>
+          <printer>printer/NEC-PC-PR150</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>pr201</driver>
+          <printer>printer/NEC-PC-PR201</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>rpdl</driver>
+          <printer>printer/Ricoh-RPDL_III_Laser_Printer</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>rpdl</driver>
+          <printer>printer/Ricoh-RPDL_II_Laser_Printer</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>rpdl</driver>
+          <printer>printer/Ricoh-RPDL_IV_Laser_Printer</printer>
+        </constraint>
+        <constraint sense="false">
+          <driver>rpdl</driver>
+          <printer>printer/Ricoh-RPDL_I_Laser_Printer</printer>
+        </constraint>
+      </constraints>
+    </enum_val>
     <enum_val id="ev/1">
       <ev_longname>
         <en>300x300 DPI</en>
@@ -2676,143 +2813,6 @@
         <constraint sense="false">
           <driver>mj8000c</driver>
           <printer>printer/Epson-Stylus_Color_3000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>ml600</driver>
-          <printer>printer/Oki-Microline_600CL</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>ml600</driver>
-          <printer>printer/Oki-Microline_620CL</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>npdl</driver>
-          <printer>printer/NEC-MultiWriter</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>npdl</driver>
-          <printer>printer/NEC-PC-PR1000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>npdl</driver>
-          <printer>printer/NEC-PC-PR2000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>picty180</driver>
-          <printer>printer/NEC-PICTY180</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>pr150</driver>
-          <printer>printer/NEC-PC-PR150</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>pr201</driver>
-          <printer>printer/NEC-PC-PR201</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>rpdl</driver>
-          <printer>printer/Ricoh-RPDL_III_Laser_Printer</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>rpdl</driver>
-          <printer>printer/Ricoh-RPDL_II_Laser_Printer</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>rpdl</driver>
-          <printer>printer/Ricoh-RPDL_IV_Laser_Printer</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>rpdl</driver>
-          <printer>printer/Ricoh-RPDL_I_Laser_Printer</printer>
-        </constraint>
-      </constraints>
-    </enum_val>
-    <enum_val id="ev/0">
-      <ev_longname>
-        <en>360x360 DPI</en>
-      </ev_longname>
-      <ev_shortname>
-        <en>360x360dpi</en>
-      </ev_shortname>
-      <ev_driverval>360x360</ev_driverval>
-      <constraints>
-        <constraint sense="false">
-          <driver>dj505j</driver>
-          <printer>printer/HP-DeskJet_505J_Plus</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>escpage</driver>
-          <printer>printer/Epson-LP-xx00</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>fmlbp</driver>
-          <printer>printer/Fujitsu-FMLBP2xx_Page_Printer</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lbp310</driver>
-          <printer>printer/Canon-LBP-310</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lbp320</driver>
-          <printer>printer/Canon-LBP-320_Pro</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lbp320</driver>
-          <printer>printer/Canon-LBP-350</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lips2p</driver>
-          <printer>printer/Canon-LIPS-IIplus</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lips4</driver>
-        </constraint>
-        <constraint sense="false">
-          <driver>lips4v</driver>
-        </constraint>
-        <constraint sense="false">
-          <driver>lj4dithp</driver>
-          <printer>printer/HP-LaserJet_4V_4LJ_Pro</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lp2000</driver>
-          <printer>printer/Epson-LP-2000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lp2000</driver>
-          <printer>printer/Epson-LP-3000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lp2000</driver>
-          <printer>printer/Epson-LP-7000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>lp2000</driver>
-          <printer>printer/Epson-LP-7000G</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>md1xMono</driver>
-          <printer>printer/Alps-MD-1300</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>md1xMono</driver>
-          <printer>printer/Alps-MD-1500</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>md50Eco</driver>
-          <printer>printer/Alps-MD-5000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>md50Eco</driver>
-          <printer>printer/Oki-DP_5000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>md50Mono</driver>
-          <printer>printer/Alps-MD-5000</printer>
-        </constraint>
-        <constraint sense="false">
-          <driver>md50Mono</driver>
-          <printer>printer/Oki-DP_5000</printer>
         </constraint>
         <constraint sense="false">
           <driver>ml600</driver>
