@@ -1,3 +1,8 @@
+2009-11-27  OpenPrinting Web Server <webmaster@openprinting.org>
+
+	* db/source/opt/jap-Resolution.xml:
+	  Entries modified in the MySQL database.
+
 2009-11-27  Till Kamppeter <till.kamppeter@gmail.com>
 
 	* db/source/opt/jap-Resolution.xml: Fixed bug in first export which was
